@@ -27,7 +27,7 @@
 					"MMM  d HH:mm:ss",
 					"MMM dd HH:mm:ss"
         ],
-        {% if .convert_timezone %}"timezone": "{{ beat.timezone }}",{% end %}
+        {< if .convert_timezone >}"timezone": "{{ beat.timezone }}",{< end >}
         "ignore_failure": true
       }
     }
